Added counts of points for groundwater and surface
