# backend/routers/groundwater.py
@@ -135,6 +135,19 @@ def get_groundwater_level_station_report_by_id_and_year(id, year):
         "hydrograph": hydrograph
     }, 200
 
+@groundwater.route('/quality/stations/<int:id>/station-statistics', methods=['GET'])
+def get_groundwater_station_statistics(id):
+    """
+        Get Groundwater station statistics for the given station ID.
+        These are the number of unique parameters and the number of days analysed.
+    """
+    groundwater_station_statistics = app.db.get_water_quality_station_statistics(station_id = id)
+
+    return {
+        "uniqueParams": groundwater_station_statistics['unique_params'],
+        "sampleDates": groundwater_station_statistics['sample_dates']
+    }
+
 @groundwater.route('/quality/stations/<int:id>/report', methods=['GET'])
 def get_groundwater_quality_station_report_by_id(id):
     """
@@ -171,11 +184,13 @@ def get_groundwater_quality_station_report_by_id(id):
             "ty": groundwater_quality_station_metadata["ty"],
             "description": groundwater_quality_station_metadata["description"],
             "licence_link": groundwater_quality_station_metadata["licence_link"],
-            "sparkline": {}
+            "sparkline": {},
+            "uniqueParams": 0,
+            "sampleDates": 0
         }, 404
 
     try:
-        computed_groundwater_quality_station_metrics = generate_groundwater_quality_station_metrics(raw_groundwater_quality_station_metrics)
+        (computed_groundwater_quality_station_metrics, unique_params, sample_dates)  = generate_groundwater_quality_station_metrics(raw_groundwater_quality_station_metrics)
     except Exception as error:
         raise Exception({
                 "user_message": f"Error Calculating Metrics for Groundwater Quality Station: {groundwater_quality_station_metadata["name"]} (Id: {id})",
@@ -191,5 +206,7 @@ def get_groundwater_quality_station_report_by_id(id):
         "ty": groundwater_quality_station_metadata["ty"],
         "description": groundwater_quality_station_metadata["description"],
         "licence_link": groundwater_quality_station_metadata["licence_link"],
-        "sparkline": computed_groundwater_quality_station_metrics
+        "sparkline": computed_groundwater_quality_station_metrics,
+        "uniqueParams": unique_params,
+        "sampleDates": sample_dates
     }, 200
